refactor dao\dto(in process)